Use flex for horizontal/vertical centering to avoid some blurry text issues caused by transform

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
 html,
 body {
-	padding: 0;
-	margin: 0;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -18,10 +19,11 @@ h1 {
 }
 
 #main {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50.1%) translateY(-50.1%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  height: 100%;
 }
 
 #logo {
@@ -35,6 +37,7 @@ h1 {
 #lcd-container {
   position: relative;
   display: inline-block;
+  align-self: center;
   margin-top: 20px;
   margin-bottom: 10px;
 
